--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<script src="scripts/main.js"></script>
+<!doctype html>
+<html lang="en">
+
+<head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta charset="utf-8">
+  <title>Berni - Alpha</title>
+  <base href="/">
+</head>
+
+<body>
+  <h1>Hola Mundo</h1>
+  
+
+</html>
